--- a/documents.html
+++ b/documents.html
@@ -1616,7 +1616,7 @@
                                         <button class="btn btn-view" onclick="viewDocument('images/dostizheniya-uchenikov/zarnitsa-2024-1.jpg', 'Грамота Юнармия')">
                                             👁️ Просмотр
                                         </button>
-                                        <a href="images/dostizheniya-uchenikov/zarnitsa-2024-1.jpg" class="btn btn-download" download>
+                                        <a href="images/portfolio/zarnica-ml-gruppa-2024-1.pdf" class="btn btn-download" download>
                                             📥 Скачать
                                         </a>
                                     </td>
@@ -1633,7 +1633,7 @@
                                         <button class="btn btn-view" onclick="viewDocument('images/dostizheniya-uchenikov/zarnitsa-2024-1.jpg', 'Грамота Юнармия')">
                                             👁️ Просмотр
                                         </button>
-                                        <a href="images/dostizheniya-uchenikov/zarnitsa-2024-1.jpg" class="btn btn-download" download>
+                                        <a href="images/portfolio/zarnica-sred-gruppa-2024-1.pdf" class="btn btn-download" download>
                                             📥 Скачать
                                         </a>
                                     </td>
@@ -1650,7 +1650,7 @@
                                         <button class="btn btn-view" onclick="viewDocument('images/dostizheniya-uchenikov/zarnitsa-2024-1.jpg', 'Грамота Юнармия')">
                                             👁️ Просмотр
                                         </button>
-                                        <a href="images/dostizheniya-uchenikov/zarnitsa-2024-1.jpg" class="btn btn-download" download>
+                                        <a href="images/portfolio/zarnica-st-gruppa-2025-1.pdf" class="btn btn-download" download>
                                             📥 Скачать
                                         </a>
                                     </td>
@@ -1667,7 +1667,7 @@
                                         <button class="btn btn-view" onclick="viewDocument('documents/blagodarnost-yuid.pdf', 'Благодарность ЮИД')">
                                             👁️ Просмотр
                                         </button>
-                                        <a href="documents/blagodarnost-yuid.pdf" class="btn btn-download" download>
+                                        <a href="images/portfolio/assambleya-2025-1" class="btn btn-download" download>
                                             📥 Скачать
                                         </a>
                                     </td>
