--- a/yuid.html
+++ b/yuid.html
@@ -1676,8 +1676,9 @@
                 <div class="gallery-category" data-category="1">
                     <div class="gallery-category-header">Памяти жертв ДТП</div>
                     <div class="gallery-slider" onclick="openGalleryLightbox(1, 0)">
+                          <!-- Фото 1 -->
                         <div class="gallery-slide active">
-                            <div class="gallery-placeholder">
+                           <img src="images/yuid/pamyat-dtp-2025-1.jpg" 
                                 <div class="icon">🚑</div>
                                 <p>Участие в информационно-пропагандистской акции, 
                                  посвященной памяти жертв ДТП</p>
