--- a/yuid.html
+++ b/yuid.html
@@ -1679,11 +1679,9 @@
                           <!-- Фото 1 -->
                         <div class="gallery-slide active">
                            <img src="images/yuid/pamyat-dtp-2025-1.jpg" 
-                                <div class="icon">🚑</div>
-                                <p>Участие в информационно-пропагандистской акции, 
-                                 посвященной памяти жертв ДТП</p>
-                            </div>
-                        </div>
+                                alt="Памяти жертв ДТП"
+                         style="width: 100%; height: 100%; object-fit: cover;">
+                </div> 
                         <div class="gallery-slide">
                             <div class="gallery-placeholder">
                                 <div class="icon">🚑</div>
