--- a/yuid.html
+++ b/yuid.html
@@ -1683,15 +1683,15 @@
                          style="width: 100%; height: 100%; object-fit: cover;">
                 </div> 
                         <div class="gallery-slide">
-                            <div class="gallery-placeholder">
-                                <div class="icon">🚑</div>
-                                <p>Фото 2<br>(будет добавлено)</p>
-                            </div>
+                             <img src="images/yuid/pamyat-dtp-2025-2.jpg" 
+                                alt="Памяти жертв ДТП"
+                         style="width: 100%; height: 100%; object-fit: cover;">  
                         </div>
                         <div class="gallery-slide">
-                            <div class="gallery-placeholder">
-                                <div class="icon">🚑</div>
-                                <p>Фото 3<br>(будет добавлено)</p>
+                           <img src="images/yuid/pamyat-dtp-2025-2.jpg" 
+                                alt="Памяти жертв ДТП"
+                         style="width: 100%; height: 100%; object-fit: cover;">  
+                        </div>
                             </div>
                         </div>
                         <button class="gallery-nav prev" onclick="event.stopPropagation(); prevPhoto(1)">◀</button>
