--- a/yuid.html
+++ b/yuid.html
@@ -1630,7 +1630,7 @@
 
         <!-- ТАБЛИЦА МЕРОПРИЯТИЙ -->
         <div class="events-section">
-            <h3 class="section-title">🏆 Мероприятия и достижения</h3>
+            <h3 class="section-title">🏆 Мероприятия и достижения прошлых лет</h3>
             <div class="events-table-container">
                 <table class="events-table">
                     <thead>
@@ -1875,7 +1875,7 @@
                     Программа отряда ЮИД на 2025-2026 учебный год (PDF)
                 </div>
                 <div class="resource-item" onclick="openDocumentModal('schedule')">
-                    <span class="resource-icon">📋</span>
+                    <span class="resource-icon">📅</span>
                     Расписание занятий отряда ЮИД
                 </div>
                 <div class="resource-item" onclick="openDocumentModal('regulations')">
@@ -1895,7 +1895,7 @@
                     Официальный сайт ГИБДД МВД России
                 </a>
                 <div class="resource-item" onclick="openDocumentModal('presentation')">
-                    <span class="resource-icon">📊</span>
+                    <span class="resource-icon">🖼️</span>
                     Презентация о работе отряда ЮИД
                 </div>
             </div>
