--- a/yunarmiya.html
+++ b/yunarmiya.html
@@ -1557,7 +1557,7 @@
 
         <!-- О ДВИЖЕНИИ ЮНАРМИЯ -->
         <div class="about-movement">
-            <h3 class="section-title">О движении Юнармия</h3>
+            <h3 class="section-title">📖О движении Юнармия</h3>
             <div class="about-grid">
                 <!-- Основные сведения -->
                 <div class="about-card">
@@ -1573,7 +1573,7 @@
 
                 <!-- Цели и задачи -->
                 <div class="about-card">
-                    <h3>Цели и задачи</h3>
+                    <h3>🎯Цели и задачи</h3>
                     <ul>
                         <li>Воспитание чувства патриотизма и гордости за Россию</li>
                         <li>Популяризация военной службы и подготовка к службе в Вооружённых Силах РФ</li>
@@ -1587,7 +1587,7 @@
 
         <!-- НАПРАВЛЕНИЯ ПОДГОТОВКИ -->
         <div class="training-section">
-            <h3 class="section-title">Направления подготовки</h3>
+            <h3 class="section-title">📚 Направления подготовки</h3>
             <div class="training-grid">
                 <div class="training-card">
                     <span class="training-icon">🏅</span>
@@ -1629,7 +1629,7 @@
 
         <!-- ТАБЛИЦА МЕРОПРИЯТИЙ -->
         <div class="events-section">
-            <h3 class="section-title">Мероприятия и достижения прошлых лет</h3>
+            <h3 class="section-title">🏆 Мероприятия и достижения прошлых лет</h3>
             <div class="events-table-container">
                 <table class="events-table">
                     <thead>
@@ -1673,7 +1673,7 @@
 
     <!-- ФОТОГАЛЕРЕЯ -->
 <div class="gallery-section">
-    <h3 class="section-title">Фотогалерея</h3>
+    <h3 class="section-title">📸 Фотогалерея</h3>
     <div class="gallery-grid">
         <!-- Категория 1: Смотр строя и песни -->
         <div class="gallery-category" data-category="1">
