--- a/yuid.html
+++ b/yuid.html
@@ -1681,18 +1681,19 @@
                            <img src="images/yuid/pamyat-dtp-2025-1.jpg" 
                                 alt="Памяти жертв ДТП"
                          style="width: 100%; height: 100%; object-fit: cover;">
-                </div> 
+                       </div> 
+                          <!-- Фото 2 -->
                         <div class="gallery-slide">
                              <img src="images/yuid/pamyat-dtp-2025-2.jpg" 
                                 alt="Памяти жертв ДТП"
                          style="width: 100%; height: 100%; object-fit: cover;">  
                         </div>
+                          <!-- Фото 3 -->
                         <div class="gallery-slide">
                            <img src="images/yuid/pamyat-dtp-2025-2.jpg" 
                                 alt="Памяти жертв ДТП"
                          style="width: 100%; height: 100%; object-fit: cover;">  
                         </div>
-                            </div>
                         </div>
                         <button class="gallery-nav prev" onclick="event.stopPropagation(); prevPhoto(1)">◀</button>
                         <button class="gallery-nav next" onclick="event.stopPropagation(); nextPhoto(1)">▶</button>
