--- a/yunarmiya.html
+++ b/yunarmiya.html
@@ -1561,7 +1561,7 @@
             <div class="about-grid">
                 <!-- Основные сведения -->
                 <div class="about-card">
-                    <h3>Основные сведения</h3>
+                    <h3>🚩 Основные сведения</h3>
                     <ul>
                         <li><strong>Год создания движения:</strong> 2016 (по инициативе Министра обороны РФ Сергея Шойгу)</li>
                         <li><strong>Отряд в школе:</strong> Действует с 2025 года</li>
