--- a/yuid.html
+++ b/yuid.html
@@ -1708,23 +1708,24 @@
                 <div class="gallery-category" data-category="2">
                     <div class="gallery-category-header">Засветись</div>
                     <div class="gallery-slider" onclick="openGalleryLightbox(2, 0)">
+                         <!-- Фото 1 -->
                         <div class="gallery-slide active">
-                            <div class="gallery-placeholder">
-                                <div class="icon">🎉</div>
-                                <p>Фигурное вождение<br>(будет добавлено)</p>
-                            </div>
+                      <img src="images/yuid/zasvetis-2025-1.jpg" 
+                      alt="Памяти жертв ДТП"
+                         style="width: 100%; height: 100%; object-fit: cover;">
                         </div>
+                          <!-- Фото 2 -->
                         <div class="gallery-slide">
-                            <div class="gallery-placeholder">
-                                <div class="icon">🎉</div>
-                                <p>Фото 2<br>(будет добавлено)</p>
-                            </div>
+                         <img src="images/yuid/zasvetis-2025-5.jpg" 
+                         alt="Памяти жертв ДТП"
+                         style="width: 100%; height: 100%; object-fit: cover;">
                         </div>
+                          <!-- Фото 3 -->
                         <div class="gallery-slide">
-                            <div class="gallery-placeholder">
-                                <div class="icon">🎉</div>
-                                <p>Фото 3<br>(будет добавлено)</p>
-                            </div>
+                         <img src="images/yuid/zasvetis-2025-6.jpg" 
+                        alt="Памяти жертв ДТП"
+                         style="width: 100%; height: 100%; object-fit: cover;">
+                        </div>
                         </div>
                         <button class="gallery-nav prev" onclick="event.stopPropagation(); prevPhoto(2)">◀</button>
                         <button class="gallery-nav next" onclick="event.stopPropagation(); nextPhoto(2)">▶</button>
@@ -1740,22 +1741,23 @@
                 <div class="gallery-category" data-category="3">
                     <div class="gallery-category-header">Акции совместно с ГИБДД</div>
                     <div class="gallery-slider" onclick="openGalleryLightbox(3, 0)">
+                          <!-- Фото 1 -->
                         <div class="gallery-slide active">
-                            <div class="gallery-placeholder">
-                                <div class="icon">👮</div>
-                                <p>Патрулирование<br>(будет добавлено)</p>
+                             <img src="images/yuid/sovmestno-s-gai-2025-1.jpg" 
+                      alt="Памяти жертв ДТП"
+                         style="width: 100%; height: 100%; object-fit: cover;"> 
                             </div>
-                        </div>
+                      <!-- Фото 2 -->
                         <div class="gallery-slide">
-                            <div class="gallery-placeholder">
-                                <div class="icon">👮</div>
-                                <p>Фото 2<br>(будет добавлено)</p>
+                            <img src="images/yuid/sovmestno-s-gai-2025-2.jpg" 
+                      alt="Памяти жертв ДТП"
+                         style="width: 100%; height: 100%; object-fit: cover;">
                             </div>
-                        </div>
+                       <!-- Фото 3 --> 
                         <div class="gallery-slide">
-                            <div class="gallery-placeholder">
-                                <div class="icon">👮</div>
-                                <p>Фото 3<br>(будет добавлено)</p>
+                             <img src="images/yuid/sovmestno-s-gai-2025-3.jpg" 
+                      alt="Памяти жертв ДТП"
+                         style="width: 100%; height: 100%; object-fit: cover;">
                             </div>
                         </div>
                         <button class="gallery-nav prev" onclick="event.stopPropagation(); prevPhoto(3)">◀</button>
