--- a/portfolio.html
+++ b/portfolio.html
@@ -890,7 +890,7 @@
                                  flex-shrink: 0; 
                                  margin-top: 0.2rem;">✓</span>
                     <span style="font-size: 1.05rem; line-height: 1.6;">
-                        Рабочие программы по ОБЗР
+                        Приказы по школе
                     </span>
                 </div>
                 
@@ -1526,6 +1526,7 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
 
