--- a/documents.html
+++ b/documents.html
@@ -1613,7 +1613,7 @@
                                     </td>
                                     <td class="doc-date">2024</td>
                                     <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('images/dostizheniya-uchenikov/zarnitsa-2024-1.jpg', 'Грамота Юнармия')">
+                                        <button class="btn btn-view" onclick="viewDocument('images/portfolio/zarnica-ml-gruppa-2024-1.pdf', 'Грамота Юнармия')">
                                             👁️ Просмотр
                                         </button>
                                         <a href="images/portfolio/zarnica-ml-gruppa-2024-1.pdf" class="btn btn-download" download>
@@ -1630,7 +1630,7 @@
                                     </td>
                                     <td class="doc-date">2024</td>
                                     <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('images/dostizheniya-uchenikov/zarnitsa-2024-1.jpg', 'Грамота Юнармия')">
+                                        <button class="btn btn-view" onclick="viewDocument('images/portfolio/zarnica-sred-gruppa-2024-1.pdf', 'Грамота Юнармия')">
                                             👁️ Просмотр
                                         </button>
                                         <a href="images/portfolio/zarnica-sred-gruppa-2024-1.pdf" class="btn btn-download" download>
@@ -1647,7 +1647,7 @@
                                     </td>
                                     <td class="doc-date">2025</td>
                                     <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('images/dostizheniya-uchenikov/zarnitsa-2024-1.jpg', 'Грамота Юнармия')">
+                                        <button class="btn btn-view" onclick="viewDocument('images/portfolio/zarnica-st-gruppa-2025-1.pdf', 'Грамота Юнармия')">
                                             👁️ Просмотр
                                         </button>
                                         <a href="images/portfolio/zarnica-st-gruppa-2025-1.pdf" class="btn btn-download" download>
@@ -1664,7 +1664,7 @@
                                     </td>
                                     <td class="doc-date">2025</td>
                                     <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('documents/blagodarnost-yuid.pdf', 'Благодарность ЮИД')">
+                                        <button class="btn btn-view" onclick="viewDocument('images/portfolio/assambleya-2025-1', 'Благодарность ЮИД')">
                                             👁️ Просмотр
                                         </button>
                                         <a href="images/portfolio/assambleya-2025-1" class="btn btn-download" download>
