--- a/documents.html
+++ b/documents.html
@@ -1664,10 +1664,10 @@
                                     </td>
                                     <td class="doc-date">2025</td>
                                     <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('images/portfolio/assambleya-2025-1', 'Благодарность ЮИД')">
+                                        <button class="btn btn-view" onclick="viewDocument('images/portfolio/assambleya-2025-1.pdf', 'Благодарность ЮИД')">
                                             👁️ Просмотр
                                         </button>
-                                        <a href="images/portfolio/assambleya-2025-1" class="btn btn-download" download>
+                                        <a href="images/portfolio/assambleya-2025-1.pdf" class="btn btn-download" download>
                                             📥 Скачать
                                         </a>
                                     </td>
