--- a/help-at-home.html
+++ b/help-at-home.html
@@ -470,7 +470,7 @@ nav {
 }
 
 .nav-menu > li.has-submenu > a.active + .submenu a {
-    color: white;
+    color: #003D7A;
 }
 
 .nav-menu > li.has-submenu > a.active + .submenu a:hover {
