--- a/safety-dialogue.html
+++ b/safety-dialogue.html
@@ -80,7 +80,7 @@ nav {
     padding: 0 1rem 2rem;       
 }   
     .page-title { 
-    font-size: 2.5rem; 
+    font-size: 2rem; 
     color: var(--color-primary); 
     margin-bottom: 1.5rem;     
     padding-bottom: 0.5rem;     
@@ -965,7 +965,7 @@ document.addEventListener('keydown', function(event) {
                             <strong>О первой помощи:</strong>
                             "Если друг порезался на улице, а аптечки нет — как поможешь?"
                         </div>
-                    </ul>
+                   </div>
                     
                     <h3>⚠️ Что НЕ делать:</h3>
                     <ul>
