--- a/safety-dialogue.html
+++ b/safety-dialogue.html
@@ -920,7 +920,7 @@ document.addEventListener('keydown', function(event) {
                     
                     <h3>🎥 Рекомендуемые образовательные каналы:</h3>
                     <ul>
-                        <li><strong>YouTube-канал МЧС России:</strong> Короткие ролики о действиях в ЧС (без драматизации)</li>
+                        <li><strong>Rutube-канал МЧС России:</strong> Короткие ролики о действиях в ЧС (без драматизации)</li>
                         <li><strong>Программа "Школа безопасности":</strong> Образовательные сюжеты для подростков</li>
                         <li><strong>Сайт mchs.gov.ru → "Населению":</strong> Памятки в формате инфографики</li>
                     </ul>
@@ -1158,16 +1158,16 @@ document.addEventListener('keydown', function(event) {
 
                 <div class="resource-card">
                     <div class="resource-icon">🎥</div>
-                    <h3>YouTube-канал МЧС России</h3>
+                    <h3>Rutube-канал МЧС России</h3>
                     <p>Короткие образовательные ролики для семейного просмотра</p>
-                    <a href="https://www.youtube.com/@MCHS_RUSSIA" target="_blank" class="resource-link">Смотреть →</a>
+                    <a href="https://rutube.ru/channel/23875424/?ysclid=miyx03maph883196484" target="_blank" class="resource-link">Смотреть →</a>
                 </div>
 
                 <div class="resource-card">
                     <div class="resource-icon">📱</div>
                     <h3>Мобильное приложение "МЧС России"</h3>
                     <p>Уведомления о ЧС, интерактивные инструкции по действиям в различных ситуациях</p>
-                    <a href="#" class="resource-link">Скачать →</a>
+                    <a href="https://www.rustore.ru/catalog/app/io.citizens.security" class="resource-link">Скачать →</a>
                 </div>
             </div>
         </div>
