--- a/training-camps.html
+++ b/training-camps.html
@@ -80,7 +80,7 @@ nav {
     padding: 0 1rem 2rem;       
 }   
     .page-title { 
-    font-size: 2.5rem; 
+    font-size: 2rem; 
     color: var(--color-primary); 
     margin-bottom: 1.5rem;     
     padding-bottom: 0.5rem;     
@@ -630,7 +630,7 @@ nav {
 }
 
 .nav-menu > li.has-submenu > a.active + .submenu a {
-    color: white;
+    color: #003D7A;
 }
 
 .nav-menu > li.has-submenu > a.active + .submenu a:hover {
@@ -859,7 +859,7 @@ document.addEventListener('keydown', function(event) {
 
         <div class="intro-section">
             <h2>Учебно-полевые сборы — обязательная часть программы ОБЗР</h2>
-            <p>Сборы проводятся для закрепления практических навыков по модулю № 2 <strong>"Военная подготовка"</strong> и являются <strong>обязательными для всех учащихся</strong> (юношей и девушек) 8 и 10 классов.</p>
+            <p>Сборы проводятся для закрепления практических навыков по модулю № 2 <strong>"Военная подготовка"</strong> и являются <strong>обязательными для всех юношей</strong>10 классов.</p>
             <p style="margin-top: 1rem;"><strong>Важно!</strong> Без участия в сборах или без уважительной причины пропуска невозможно получить положительную оценку по предмету ОБЗР за год.</p>
         </div>
 
@@ -870,8 +870,8 @@ document.addEventListener('keydown', function(event) {
                 <h3>Длительность сборов</h3>
                 <ul>
                     <li><strong>10 класс:</strong> 5 дней (35 учебных часов)</li>
-                    <li><strong>8 класс:</strong> 3 дня (21 учебный час)</li>
-                    <li>Проводятся в конце учебного года (май-июнь)</li>
+                    <li><strong>8 класс:</strong> 3 дня (проект на стадии рассмотрения)</li>
+                    <li>Проводятся в течение учебного кода</li>
                 </ul>
             </div>
 
@@ -879,9 +879,10 @@ document.addEventListener('keydown', function(event) {
                 <div class="info-card-icon">📍</div>
                 <h3>Место проведения</h3>
                 <ul>
-                    <li>На базе школы (территория, спортзал)</li>
-                    <li>Возможен выезд на учебно-полевую базу</li>
-                    <li>Взаимодействие с военкоматом, МЧС</li>
+                    <li>На базе Учебно-методического центра патриотического воспитания
+                        Приволжского федерального округа «Гвардеец». </li>
+                    <li>Нижегородская область, Балахнинский район, д. Истомино.</li>
+                    <li>Тел.: 8(83144) 6-92-20</li>
                 </ul>
             </div>
 
@@ -919,7 +920,6 @@ document.addEventListener('keydown', function(event) {
                     <h3>🏥 Где получить справку:</h3>
                     <ul>
                         <li><strong>Поликлиника по месту жительства:</strong> Обратитесь к участковому педиатру/терапевту</li>
-                        <li><strong>Военкомат:</strong> Для юношей 10 класса (если стоят на воинском учёте)</li>
                         <li>Срок оформления: 1-3 дня</li>
                     </ul>
                     
@@ -965,8 +965,6 @@ document.addEventListener('keydown', function(event) {
                                     <li>Спортивная форма (2 комплекта)</li>
                                     <li>Удобные кроссовки (беговые)</li>
                                     <li>Запасные носки (3-4 пары)</li>
-                                    <li>Головной убор (кепка, бандана)</li>
-                                    <li>Ветровка/дождевик (на случай непогоды)</li>
                                     <li>Сменная обувь (кроссовки для зала)</li>
                                 </ul>
                             </div>
@@ -978,8 +976,6 @@ document.addEventListener('keydown', function(event) {
                                     <li>Зубная щётка + паста</li>
                                     <li>Полотенце (2 шт: для душа и рук)</li>
                                     <li>Влажные салфетки</li>
-                                    <li>Солнцезащитный крем (SPF 30+)</li>
-                                    <li>Репеллент от комаров</li>
                                 </ul>
                             </div>
 
@@ -1007,7 +1003,6 @@ document.addEventListener('keydown', function(event) {
                                 <ul>
                                     <li>Пластыри (от мозолей)</li>
                                     <li>Бинт эластичный</li>
-                                    <li>Обезболивающее (парацетамол)</li>
                                     <li>Антисептик (перекись, хлоргексидин)</li>
                                     <li>Средство от аллергии (если есть)</li>
                                 </ul>
@@ -1067,7 +1062,7 @@ document.addEventListener('keydown', function(event) {
                     <ul>
                         <li><strong>"Не хочу вставать рано"</strong> → Начните за 1-2 недели практиковать ранний подъём (7:00-7:30)</li>
                         <li><strong>"Боюсь, что не получится выполнить нормативы"</strong> → Подготовьтесь физически заранее (см. страницу "Как помочь ребёнку дома")</li>
-                        <li><strong>"Буду скучать по дому"</strong> → Объясните, что это всего 3-5 дней, связь с родителями будет (телефон преподавателя)</li>
+                        <li><strong>"Буду скучать по дому"</strong> → Объясните, что это всего 3-5 дней, связь с родителями по телефону</li>
                         <li><strong>"Стесняюсь, что не знаю, как что делать"</strong> → Успокойте: "Все учатся вместе, никто не родился с этими знаниями"</li>
                     </ul>
                     
@@ -1082,8 +1077,7 @@ document.addEventListener('keydown', function(event) {
                     <h3>📞 Связь с домом во время сборов:</h3>
                     <ul>
                         <li>У учеников будут мобильные телефоны (но использование регламентировано)</li>
-                        <li>Телефон преподавателя доступен круглосуточно: <a href="mailto:ademin1977@vk.com" style="color: var(--color-primary); font-weight: 600;">ademin1977@vk.com</a></li>
-                        <li>В экстренных случаях — немедленная связь с родителями</li>
+                        <li>Телефон преподавателя доступен круглосуточно</li>    
                     </ul>
                 </div>
             </div>
@@ -1096,21 +1090,21 @@ document.addEventListener('keydown', function(event) {
             <div class="faq-item">
                 <div class="faq-question">Сколько стоит участие в сборах?</div>
                 <div class="faq-answer">
-                    <strong>Базовое обучение абсолютно бесплатно.</strong> Школа предоставляет место проведения, инструкторов, базовое оборудование. Дополнительные расходы возможны только на питание (если сборы с выездом) — в этом случае будет предварительное согласование с родителями.
+                    <strong>Базовое обучение абсолютно бесплатно.</strong> Школа предоставляет место проведения, инструкторов, базовое оборудование.
                 </div>
             </div>
 
             <div class="faq-item">
                 <div class="faq-question">Чем кормят на сборах?</div>
                 <div class="faq-answer">
-                    Если сборы проводятся на базе школы — ученики приходят утром и уходят вечером, питание дома. Если сборы с выездом — трёхразовое питание (завтрак, обед, ужин), меню согласовано с требованиями СанПиН для детского питания. Учитываются аллергии и особенности питания (сообщите заранее!).
+               На базе УЦ "Гвардеец" будет организовано пятиразовое питание.
                 </div>
             </div>
 
             <div class="faq-item">
                 <div class="faq-question">Есть ли душ и туалеты?</div>
                 <div class="faq-answer">
-                    Да, условия соответствуют санитарным нормам. Если сборы на базе школы — используются школьные раздевалки и душевые спортзала. Если на выезде — учебная база оборудована душами, туалетами, умывальниками.
+                    Да, условия соответствуют санитарным нормам. Учебный центр оборудован душами, туалетами, умывальниками.
                 </div>
             </div>
 
@@ -1124,7 +1118,7 @@ document.addEventListener('keydown', function(event) {
             <div class="faq-item">
                 <div class="faq-question">Обязательны ли сборы для девушек?</div>
                 <div class="faq-answer">
-                    <strong>Да, сборы обязательны для всех</strong> — и юношей, и девушек. Программа адаптирована с учётом гендерных особенностей (например, нормативы физподготовки разные). Это требование ФГОС ОБЗР 2024 года.
+                    <strong>Нет, сборы обязательны</strong>только для юношей.
                 </div>
             </div>
         </div>
