--- a/training-camps.html
+++ b/training-camps.html
@@ -859,7 +859,7 @@ document.addEventListener('keydown', function(event) {
 
         <div class="intro-section">
             <h2>Учебно-полевые сборы — обязательная часть программы ОБЗР</h2>
-            <p>Сборы проводятся для закрепления практических навыков по модулю № 2 <strong>"Военная подготовка"</strong> и являются <strong>обязательными для всех юношей</strong>10 классов.</p>
+            <p>Сборы проводятся для закрепления практических навыков по модулю № 2 <strong>"Военная подготовка"</strong> и являются <strong>обязательными для всех юношей</strong> 10 классов.</p>
             <p style="margin-top: 1rem;"><strong>Важно!</strong> Без участия в сборах или без уважительной причины пропуска невозможно получить положительную оценку по предмету ОБЗР за год.</p>
         </div>
 
@@ -1118,7 +1118,7 @@ document.addEventListener('keydown', function(event) {
             <div class="faq-item">
                 <div class="faq-question">Обязательны ли сборы для девушек?</div>
                 <div class="faq-answer">
-                    <strong>Нет, сборы обязательны</strong>только для юношей.
+                    <strong>Нет, сборы обязательны</strong> только для юношей.
                 </div>
             </div>
         </div>
@@ -1130,7 +1130,9 @@ document.addEventListener('keydown', function(event) {
             
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <div class="gallery-placeholder">🎖️</div>
+                   <img src="images/gallery/sbory-2023-2.jpg"
+             alt="Строевая подготовка"
+             class="gallery-placeholder">
                     <div class="gallery-caption">Строевая подготовка</div>
                 </div>
 
