--- a/training-camps.html
+++ b/training-camps.html
@@ -1137,28 +1137,38 @@ document.addEventListener('keydown', function(event) {
                 </div>
 
                 <div class="gallery-item">
-                    <div class="gallery-placeholder">🔫</div>
+                  <img src="images/gallery/sbory-2023-13.jpg"
+             alt="Огневая подготовка"
+             class="gallery-placeholder">
                     <div class="gallery-caption">Огневая подготовка: сборка/разборка АК-74</div>
                 </div>
 
                 <div class="gallery-item">
-                    <div class="gallery-placeholder">🏃</div>
+                   <img src="images/gallery/sbory-2023-10.jpg"
+             alt="Полоса препятствий"
+             class="gallery-placeholder">
                     <div class="gallery-caption">Полоса препятствий</div>
                 </div>
 
                 <div class="gallery-item">
-                    <div class="gallery-placeholder">🧭</div>
-                    <div class="gallery-caption">Тактическая подготовка: ориентирование</div>
+                  <img src="images/gallery/sbory-2023-5.jpg"
+             alt="Медицинская подготовка"
+             class="gallery-placeholder">
+                    <div class="gallery-caption">Медицинская подготовка</div>
                 </div>
 
                 <div class="gallery-item">
-                    <div class="gallery-placeholder">🎯</div>
+                   <img src="images/gallery/voyennye-igry-2024-1.jpg"
+             alt="Марш-бросок"
+             class="gallery-placeholder">
                     <div class="gallery-caption">Марш-бросок</div>
                 </div>
 
                 <div class="gallery-item">
-                    <div class="gallery-placeholder">🏆</div>
-                    <div class="gallery-caption">Церемония закрытия сборов</div>
+                    <img src="images/gallery/sbory-2023-6.jpg"
+             alt="Организация питания"
+             class="gallery-placeholder">
+                    <div class="gallery-caption">Организация питания</div>
                 </div>
             </div>
         </div>
